<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="mailServerHost">probonopartner.org</string>
	<string name="mailServerPort">8025</string>
	<string name="mailerEndpoint">http://www.probonopartner.org/pages/volunteerslawyers/volunteer-opportunit</string>
    <string name="getCategoriesEndpoint">http://probonopartner.org/API/?getcategories</string>
    <string name="getStatesEndpoint"></string>
    <string name="getOpportunitiesEndpoint">http://probonopartner.org/API/</string>
    <string name="opportunities">opportunities</string>
    <string name="categories">categories</string>
    <string name="states">states</string>
    <string name="mailer">mailer</string>
    <string name="opportunity">opportunity</string>
    <string name="category">category</string>
    <string name="state">state</string>
    <string name="app_name">ProBono Partnership Volunteer By Phone</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_query">My Query Defaults</string>
    <string name="menu_contact_preferences">Contact Information Preferences</string>
    <string name="menu_subscription_preferences">Opportunity Subscription Preferences</string>
    <string name="userQueryPreferences">User Query Preferences</string>
    <string name="userProfilePreferences">User Profile Preferences</string>
    <string name="userPushPreferences">Automatic Notification Preferences</string>
    <string name="title_activity_cat">ProBono Partnership Opportunity Categories</string>
    <string name="title_activity_opplist">Opportunities</string>
    <string name="title_activity_opportunity">Opportunity</string>
    <string name="title_contactPreferences">Contact Information Preferences</string>
    <string name="title_subscriptionPreferences">Subscription Preferences</string>
    <string name="back">Back</string>
    <string name="submit">Request More Information</string>
    <string name="okAfterComment">Submit</string>
    <string name="client">Client</string>
    <string name="county">County</string>
    <string name="interested">Interested</string>
    <string name="legalWorkRequired">Legal Work Required</string>
    <string name="matterNumber">Matter Number</string>
    <string name="mission">Mission</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_firstName_preference">First name</string>
    <string name="summary_firstName_preference">Enter your First name</string>
    <string name="dialog_title_FirstName_preference">Enter your First name</string>
    <string name="title_lastName_preference">Last name</string>
    <string name="summary_lastName_preference">Enter your Last name</string>
    <string name="dialog_title_lastName_preference">Enter your Last name</string>
    <string name="title_email_preference">Email</string>
    <string name="summary_email_preference">Enter your Email Address</string>
    <string name="dialog_title_email_preference">Enter your Email Address</string>
    <string name="dialog_title_firm_preference">Enter your Firm/Company Name</string>
    <string name="title_firm_preference">Firm</string>
    <string name="summary_firm_preference">Enter your Firm/Company Name</string>
    <string name="title_telephone_number_preference">Telephone Number</string>
    <string name="summary_telephone_number_preference">Enter your Telephone Number</string>
    <string name="dialog_title_telephone_preference">Enter your Telephone Number</string>
    <string name="menu_settings">Settings</string>
    <string name="preferredStates">Preferred States</string>
    <string name="preferredCategories">Preferred Categories</string>
    <string name="preferredStatesKey">preferredStatesKey</string>
    <string name="preferredCategoriesKey">preferredCategoriesKey</string>
    <string name="queryPreferences">Query Preferences</string>
    <string name="pref_sync_frequency">Automated Opportunity Search Frequency</string>
    <string name="pref_sync_frequency_summary">Set the time between automated checks for new opportunities</string>
    <string name="pref_sync_frequency_key">prefSyncFrequency</string>
    <string name="title_activity_home">ProBono Opportunities</string>
    <string name="browseAll">Browse all opportunities by category</string>
    <string name="browsePrefs">Browse all opportunities for preferred states and categories</string>
    <string name="btn_proceed">Proceed</string>
    <string name="probonopartnership">Pro Bono Partnership</string>
    <string name="title_activity_no_subscribed">No Subscriptions Found</string>
    <string name="noSubscribedStates">You have not listed any preferred states. \nSelect states that match the opportunities you would like to see. Use your menu button or menu indicator (...) to re-visit.</string>
    <string name="noSubscribedCats">You have not listed any preferred categories. \nSelect categories that match the opportunities you would like to see. Use your menu button or menu indicator (...) to re-visit.</string>
	<string name="noContactInfo">You have not yet entered your contact information. \nPlease enter it now.  To revisit at any time, click the Menu button or indicator (...) and choose Preferences.</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="noResults">There are no opportunity results available matching the category(ies) or state(s) chosen. </string>
    <string name="noSelectedOpps">You have not selected any opportunities.</string>
    <string name="noCategoriesFound">No categories were returned from the opportunity service.</string>
    <string name="errorTryingToParseCategories">Error trying to parse categories.</string>
    <string name="errorTryingtoParseOpportunities">Error trying to parse opportunities.</string>
    <string name="errorTryingToGetCategoriesFromService">There was a problem with the service to read the opportunity categories.</string>
    <string name="errorTryingToGetOpportunitiesFromService">There was a problem with the service to read the opportunities.</string>
    <string name="title_activity_no_results">No Results</string>
    <string name="calling">Calling service</string>
    <string name="gettingListOfCategories">Getting list of categories&#8230;</string>
    <string name="gettingListOfOpportunities">Getting list of opportunities&#8230;</string>
    <string name="promptForPreferredCategories">Click and choose from the list the categories you would prefer to search.</string>
    <string name="promptForPreferredStates">Click and choose from the list the states you would prefer to search.</string>
    <string name="defaultStates"></string>
    <string name="defaultCategories"></string>
    <string name="email_subject">[PROBONO OPPS BY PHONE]Interested in Opportunities</string>
    <string name="email_paragraph">"The sender of this email is interested in the following opportunities:"</string>
    <string name="sending_email">Sending Mail&#8230;</string>
    <string name="notification_title">There are new opportunities available from ProBono Partnerships.</string>
    <string name="notification_text">There are new opportunities available from ProBono Partnerships.</string>
    <string name="notification_show_opps">Show Opportunities</string>
    <string name="title_activity_comment">Enter a Comment below</string>
    <string name="inst_activity_comment">Enter a Comment below, then click Submit to send request for information to ProBono Partnerships.</string>
    <string name="action_settings">Settings</string>
    <string name="mailSent">Pro Bono Opportunities has been informed of your interest and will be in contact with you.</string>
	<string name="pref_header_general">Preferences</string>
</resources>